Avoid article overflow

--- a/_sass/layout.sass
+++ b/_sass/layout.sass
@@ -11,6 +11,7 @@ body > header, body > footer
 
 article
   flex-grow: 1
+  overflow-y: auto
 
 article header
   margin-bottom: 1.5em
